# subcap

./: .gitignore  LICENSE  README.md  pyproject.toml
src/subcap/: align.py  cli.py  detect.py  encode.py  segment.py  styles.py  types.py
tests/: test_align.py  test_cli.py  test_detect.py  test_encode.py  test_segment.py  test_styles.py
